# ig_scraper

./: .gitignore  pyproject.toml
ig_scraper/: ig_scraper.py
