[tool.poetry]
name = "ig_scraper"
version = "0.1.0"
description = ""
authors = ["Roger Mähler <roger.mahler@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
pandas = "^1.1.5"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
rope = "^0.18.0"
pytest = "^6.2.1"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
